--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <img src="img/photo.jpg" alt="photo" />
             </div>
             <div id="text-header">
-              <h1>Seokhwan Kim <sup>Ph.D.</sup><br />Scientist, <a href="http://www.i2r.a-star.edu.sg/" target="_blank">Institute for Infocomm Research (I2R)</a></h1>
+              <h1>Seokhwan Kim <sup>Ph.D.</sup><br />Research Scientist, <a href="https://research.adobe.com/" target="_blank">Adobe Research</a></h1>
             </div>
           </div>
         </div>
@@ -29,7 +29,7 @@
           <div class="icon pull-left text-center">
             <span class="fa fa-building-o fa-fw"></span>
           </div>
-          <div class="description pull-right">1 Fusionopolis Way, #21-01 Connexis (South Tower), Singapore 138632</div>
+          <div class="description pull-right">345 Park Avenue, San Jose, CA 95110-2704, USA</div>
         </div>
         <div class="row">
           <div class="col-xs-6">
@@ -37,7 +37,7 @@
               <div class="icon pull-left text-center">
                 <span class="fa fa-phone fa-fw"></span>
               </div>
-              <div class="description pull-right">+1 (669) 223-1855</div>
+              <div class="description pull-right">+1 (408) 536-6852</div>
             </div>
           </div>
           <div class="col-xs-6">
@@ -56,7 +56,7 @@
                 <span class="fa fa-envelope fa-fw"></span>
               </div>
               <div class="description pull-right">
-                <img src="img/email_ieee.png" />
+                <img src="img/email_adobe.png" />
               </div>
             </div>
           </div>
@@ -120,6 +120,18 @@
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Research Scientist</div>
+            <div class="year">Jul 2017 -</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="https://research.adobe.com/" target="_blank">Adobe Research</a>
+            </div>
+            <div class="description">Creative Intelligence Lab.</div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
+            <div class="profession">Research Scientist</div>
             <div class="year">Jan 2012 - Jul 2017</div>
           </div>
           <div class="col-xs-9">
@@ -139,18 +151,6 @@
               <a href="https://www.mpi-inf.mpg.de/home/" target="_blank">Max Planck Institute for Informatics (MPI-INF)</a>
             </div>
             <div class="description">Databases and Information Systems<br />Advisor: Prof. Gerhard Weikum</div>
-          </div>
-        </div>
-        <div class="job clearfix">
-          <div class="col-xs-3">
-            <div class="profession">Research Assistant</div>
-            <div class="year">Sep 2005 - Dec 2011</div>
-          </div>
-          <div class="col-xs-9">
-            <div class="where">
-              <a href="http://www.postech.ac.kr/" target="_blank">Pohang University of Science and Technology (POSTECH)</a>
-            </div>
-            <div class="description">Intelligent Software Lab.,<br />Department of Computer Science and Engineering<br />Advisor: Prof. Gary Geunbae Lee</div>
           </div>
         </div>
       </div>
@@ -796,7 +796,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2017-07-10</div>
+      <div id="footer">Last updated: 2017-07-24</div>
     </div>
   </body>
 </html>
