--- a/index.html
+++ b/index.html
@@ -267,6 +267,17 @@
         <h2>Publications</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2018</div>
+          </div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C41] </div>
+            <div style="display:inline" class="title">PhotoshopQuiA: A Corpus of Non-Factoid Questions and Answers for Why-Question Answering.</div>
+            <div class="author">Andrei Dulceanu, Thang Le Dinh, Walter Chang, Trung Bui, Doo Soon Kim, Manh Chien Vu, <span>Seokhwan Kim</span></div>
+            <div class="book">To appear in Proceedings of the 11th International Conference on Language Resources and Evaluation (<a href="http://lrec2018.lrec-conf.org/en/" target="_blank">LREC 2018</a>), Miyazaki, May 2018.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2017</div>
           </div>
           <div class="col-xs-11">
@@ -796,7 +807,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2017-07-26</div>
+      <div id="footer">Last updated: 2017-12-13</div>
     </div>
   </body>
 </html>
