--- a/index.html
+++ b/index.html
@@ -270,6 +270,15 @@
             <div class="year">2018</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C42] </div>
+            <div style="display:inline" class="title">A Discourse-Aware Attention Model for Abstractive Summarization of Long Documents.</div>
+            <div class="author">Arman Cohan, Franck Dernoncourt, Doo Soon Kim, Trung Bui, <span>Seokhwan Kim</span>, Walter Chang, Nazli Goharian</div>
+            <div class="book">To appear in Proceedings of the 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (<a href="http://naacl2018.org/" target="_blank">NAACL HLT 2018</a>), New Orleans, Jun 2018.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C41] </div>
             <div style="display:inline" class="title">PhotoshopQuiA: A Corpus of Non-Factoid Questions and Answers for Why-Question Answering.</div>
             <div class="author">Andrei Dulceanu, Thang Le Dinh, Walter Chang, Trung Bui, Doo Soon Kim, Manh Chien Vu, <span>Seokhwan Kim</span></div>
@@ -807,7 +816,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2017-12-13</div>
+      <div id="footer">Last updated: 2018-03-01</div>
     </div>
   </body>
 </html>
