--- a/index.html
+++ b/index.html
@@ -185,6 +185,15 @@
         <h2>Professional Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Steering Committee</div>
+            <div class="year">2018</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">The Seventh Dialog System Technology Challenge (DSTC7)</div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Organizing Committee</div>
             <div class="year">2017</div>
           </div>
@@ -816,7 +825,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-03-01</div>
+      <div id="footer">Last updated: 2018-03-13</div>
     </div>
   </body>
 </html>
