--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
             <div class="year">2018</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">The Seventh Dialog System Technology Challenge (DSTC7)</div>
+            <div class="where">
+              <a href="http://workshop.colips.org/dstc7/" target="_blank">The Seventh Dialog System Technology Challenge (DSTC7)</a>
+            </div>
           </div>
         </div>
         <div class="job clearfix">
@@ -825,7 +827,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-03-13</div>
+      <div id="footer">Last updated: 2018-04-09</div>
     </div>
   </body>
 </html>
