--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C42] </div>
-            <div style="display:inline" class="title">A Discourse-Aware Attention Model for Abstractive Summarization of Long Documents.</div>
+            <div style="display:inline" class="title">A Discourse-Aware Attention Model for Abstractive Summarization of Long Documents.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1804.05685" target="_blank">[preprint]</a></div></div>
             <div class="author">Arman Cohan, Franck Dernoncourt, Doo Soon Kim, Trung Bui, <span>Seokhwan Kim</span>, Walter Chang, Nazli Goharian</div>
             <div class="book">To appear in Proceedings of the 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (<a href="http://naacl2018.org/" target="_blank">NAACL HLT 2018</a>), New Orleans, Jun 2018.</div>
           </div>
@@ -827,7 +827,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-04-09</div>
+      <div id="footer">Last updated: 2018-04-20</div>
     </div>
   </body>
 </html>
