--- a/index.html
+++ b/index.html
@@ -273,6 +273,15 @@
             <div class="year">2018</div>
           </div>
           <div class="col-xs-11">
+            <div class="pid_journal" style="display:inline">[J6] </div>
+            <div class="title" style="display:inline">Overview of the Sixth Dialog System Technology Challenge: DSTC6.</div>
+            <div class="author">Chiori Hori, Julien Perez, Koichiro Yoshino, Michimasa Inaba, Ryuichiro Higashinaka, <span>Seokhwan Kim</span>, Takaaki Hori, Tetsuro Takahashi, Y-Lan Boureau, Yuiko Tsunomori</div>
+            <div class="book">Computer Speech &amp; Language (accepted for publication) 2018.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C42] </div>
             <div class="title" style="display:inline">A Discourse-Aware Attention Model for Abstractive Summarization of Long Documents.<div class="link" style="display:inline"><a target="_blank" href="http://aclweb.org/anthology/N18-2097">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.coli.uni-saarland.de/papers/N18-2097/n18-2097.bib">[bib]</a></div></div>
             <div class="author">Arman Cohan, Franck Dernoncourt, Doo Soon Kim, Trung Bui, <span>Seokhwan Kim</span>, Walter Chang, Nazli Goharian</div>
@@ -819,7 +828,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-06-09</div>
+      <div id="footer">Last updated: 2018-09-04</div>
     </div>
   </body>
 </html>
