--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div class="pid_journal" style="display:inline">[J5] </div>
-            <div class="title" style="display:inline">Neural sentence embedding using only in-domain sentences for out-of-domain sentence detection in dialog systems.<div class="link" style="display:inline"><a target="_blank" href="http://www.sciencedirect.com/science/article/pii/S0167865517300089">[link]</a></div></div>
+            <div class="title" style="display:inline">Neural sentence embedding using only in-domain sentences for out-of-domain sentence detection in dialog systems.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/1807.11567">[PDF]</a></div></div>
             <div class="author">Seonghan Ryu, <span>Seokhwan Kim</span>, Junhwi Choi, Hwanjo Yu, Gary Geunbae Lee</div>
             <div class="book">Pattern Recognition Letters, 88 (26-32), Mar 2017.</div>
           </div>
@@ -828,7 +828,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-09-04</div>
+      <div id="footer">Last updated: 2018-09-05</div>
     </div>
   </body>
 </html>
