--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </div>
           <div class="col-xs-11">
             <div class="pid_journal" style="display:inline">[J6] </div>
-            <div class="title" style="display:inline">Overview of the Sixth Dialog System Technology Challenge: DSTC6.</div>
+            <div class="title" style="display:inline">Overview of the Sixth Dialog System Technology Challenge: DSTC6.<div class="link" style="display:inline"><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0885230818300937">[link]</a></div></div>
             <div class="author">Chiori Hori, Julien Perez, Koichiro Yoshino, Michimasa Inaba, Ryuichiro Higashinaka, <span>Seokhwan Kim</span>, Takaaki Hori, Tetsuro Takahashi, Y-Lan Boureau, Yuiko Tsunomori</div>
             <div class="book">Computer Speech &amp; Language (accepted for publication) 2018.</div>
           </div>
@@ -828,7 +828,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-09-05</div>
+      <div id="footer">Last updated: 2018-09-10</div>
     </div>
   </body>
 </html>
