--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <div class="pid_journal" style="display:inline">[J6] </div>
             <div class="title" style="display:inline">Overview of the Sixth Dialog System Technology Challenge: DSTC6.<div class="link" style="display:inline"><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0885230818300937">[link]</a></div></div>
             <div class="author">Chiori Hori, Julien Perez, Ryuichi Higasinaka, Takaaki Hori, Y-Lan Boureau, Michimasa Inaba, Yuiko Tsunomori, Tetsuro Takahashi, Koichiro Yoshino, <span>Seokhwan Kim</span></div>
-            <div class="book">Computer Speech &amp; Language (accepted for publication) 2018.</div>
+            <div class="book">Computer Speech &amp; Language (In Press) 2018.</div>
           </div>
         </div>
         <div class="publication clearfix">
