--- a/index.html
+++ b/index.html
@@ -270,17 +270,19 @@
         <h2>Publications</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
-            <div class="year">2018</div>
+            <div class="year">2019</div>
           </div>
           <div class="col-xs-11">
             <div class="pid_journal" style="display:inline">[J6] </div>
             <div class="title" style="display:inline">Overview of the Sixth Dialog System Technology Challenge: DSTC6.<div class="link" style="display:inline"><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0885230818300937">[link]</a></div></div>
             <div class="author">Chiori Hori, Julien Perez, Ryuichi Higasinaka, Takaaki Hori, Y-Lan Boureau, Michimasa Inaba, Yuiko Tsunomori, Tetsuro Takahashi, Koichiro Yoshino, <span>Seokhwan Kim</span></div>
-            <div class="book">Computer Speech &amp; Language (In Press) 2018.</div>
+            <div class="book">Computer Speech &amp; Language (In Press) 2019.</div>
           </div>
         </div>
         <div class="publication clearfix">
-          <div class="col-xs-1"></div>
+          <div class="col-xs-1">
+            <div class="year">2018</div>
+          </div>
           <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C42] </div>
             <div class="title" style="display:inline">A Discourse-Aware Attention Model for Abstractive Summarization of Long Documents.<div class="link" style="display:inline"><a target="_blank" href="http://aclweb.org/anthology/N18-2097">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.coli.uni-saarland.de/papers/N18-2097/n18-2097.bib">[bib]</a></div></div>
@@ -828,7 +830,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-09-10</div>
+      <div id="footer">Last updated: 2018-11-20</div>
     </div>
   </body>
 </html>
