--- a/index.html
+++ b/index.html
@@ -280,6 +280,17 @@
           </div>
         </div>
         <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C43] </div>
+            <div class="title" style="display:inline">Dynamic Memory Networks for Dialogue Topic Tracking.</div>
+            <div class="author">
+              <span>Seokhwan Kim</span>
+            </div>
+            <div class="book">To appear in Proceedings of the AAAI-19 Workshop on Dialog System Technology Challenges (<a target="_blank" href="http://workshop.colips.org/dstc7/workshop.html">DSTC7</a>), Honolulu, Jan 2019.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
           <div class="col-xs-1">
             <div class="year">2018</div>
           </div>
@@ -830,7 +841,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-11-20</div>
+      <div id="footer">Last updated: 2018-12-07</div>
     </div>
   </body>
 </html>
