--- a/index.html
+++ b/index.html
@@ -273,6 +273,17 @@
             <div class="year">2019</div>
           </div>
           <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C44] </div>
+            <div class="title" style="display:inline">Deep Recurrent Neural Networks with Layer-wise\\ Multi-head Attentions for Punctuation Restoration.</div>
+            <div class="author">
+              <span>Seokhwan Kim</span>
+            </div>
+            <div class="book">To appear in Proceedings of the 44th International Conference on Acoustics, Speech, and Signal Processing (<a target="_blank" href="https://2019.ieeeicassp.org/">ICASSP 2019</a>), Brighton, May 2019.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div class="pid_journal" style="display:inline">[J6] </div>
             <div class="title" style="display:inline">Overview of the Sixth Dialog System Technology Challenge: DSTC6.<div class="link" style="display:inline"><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0885230818300937">[link]</a></div></div>
             <div class="author">Chiori Hori, Julien Perez, Ryuichi Higasinaka, Takaaki Hori, Y-Lan Boureau, Michimasa Inaba, Yuiko Tsunomori, Tetsuro Takahashi, Koichiro Yoshino, <span>Seokhwan Kim</span></div>
@@ -283,11 +294,11 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C43] </div>
-            <div class="title" style="display:inline">Dynamic Memory Networks for Dialogue Topic Tracking.</div>
+            <div class="title" style="display:inline">Dynamic Memory Networks for Dialogue Topic Tracking.<div class="link" style="display:inline"><a target="_blank" href="http://workshop.colips.org/dstc7/papers/05.pdf">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://www.slideshare.net/seokhwankim7/dynamic-memory-networks-for-dialogue-topic-tracking">[poster]</a></div></div>
             <div class="author">
               <span>Seokhwan Kim</span>
             </div>
-            <div class="book">To appear in Proceedings of the AAAI-19 Workshop on Dialog System Technology Challenges (<a target="_blank" href="http://workshop.colips.org/dstc7/workshop.html">DSTC7</a>), Honolulu, Jan 2019.</div>
+            <div class="book">Proceedings of the AAAI-19 Workshop on Dialog System Technology Challenges (<a target="_blank" href="http://workshop.colips.org/dstc7/workshop.html">DSTC7</a>), Honolulu, Jan 2019.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -841,7 +852,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2018-12-07</div>
+      <div id="footer">Last updated: 2019-02-01</div>
     </div>
   </body>
 </html>
