--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </div>
           <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C44] </div>
-            <div class="title" style="display:inline">Deep Recurrent Neural Networks with Layer-wise\\ Multi-head Attentions for Punctuation Restoration.</div>
+            <div class="title" style="display:inline">Deep Recurrent Neural Networks with Layer-wise Multi-head Attentions for Punctuation Restoration.</div>
             <div class="author">
               <span>Seokhwan Kim</span>
             </div>
