--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="icon pull-left text-center">
             <span class="fa fa-building-o fa-fw"></span>
           </div>
-          <div class="description pull-right">345 Park Avenue, E7-421, San Jose, CA 95110, USA</div>
+          <div class="description pull-right">345 Park Avenue, A8-208, San Jose, CA 95110, USA</div>
         </div>
         <div class="row">
           <div class="col-xs-6">
@@ -852,7 +852,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-02-04</div>
+      <div id="footer">Last updated: 2019-03-05</div>
     </div>
   </body>
 </html>
