--- a/index.html
+++ b/index.html
@@ -177,6 +177,15 @@
         <h2>Professional Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Challenge Chair</div>
+            <div class="year">2019</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">The Seventh Dialog System Technology Challenge (DSTC7)</div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Steering Committee</div>
             <div class="year">2018</div>
           </div>
@@ -852,7 +861,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-03-05</div>
+      <div id="footer">Last updated: 2019-03-25</div>
     </div>
   </body>
 </html>
