--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="year">2019</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">The Seventh Dialog System Technology Challenge (DSTC7)</div>
+            <div class="where">The Eighth Dialog System Technology Challenge (DSTC8)</div>
           </div>
         </div>
         <div class="job clearfix">
