--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
             <div class="year">2019</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">The Eighth Dialog System Technology Challenge (DSTC8)</div>
+            <div class="where">
+              <a target="_blank" href="https://sites.google.com/dstc.community/dstc8/">The Eighth Dialog System Technology Challenge (DSTC8)</a>
+            </div>
           </div>
         </div>
         <div class="job clearfix">
@@ -861,7 +863,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-03-25</div>
+      <div id="footer">Last updated: 2019-04-03</div>
     </div>
   </body>
 </html>
