--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <img src="img/photo.jpg" alt="photo" />
             </div>
             <div id="text-header">
-              <h1>Seokhwan Kim <sup>Ph.D.</sup><br />Research Scientist, <a target="_blank" href="https://research.adobe.com/">Adobe Research</a></h1>
+              <h1>Seokhwan Kim<br />Research Scientist, <a target="_blank" href="https://research.adobe.com/">Adobe Research</a></h1>
             </div>
           </div>
         </div>
@@ -80,39 +80,11 @@
         <div class="interest">Text Mining</div>
       </div>
       <div class="box">
-        <h2>Education</h2>
-        <div class="education clearfix">
-          <div class="col-xs-3">
-            <div class="degree">Ph.D.</div>
-            <div class="year">Sep 2005 - Feb 2012</div>
-          </div>
-          <div class="col-xs-9">
-            <div class="where">
-              <a target="_blank" href="http://postech.ac.kr/">Pohang University of Science and Technology (POSTECH)</a>
-            </div>
-            <div class="major">Computer Science and Engineering</div>
-            <div class="description">Dissertation: Cross-Lingual Weakly-Supervised Learning of Semantic Relations<br />Advisor: Gary Geunbae Lee</div>
-          </div>
-        </div>
-        <div class="education clearfix">
-          <div class="col-xs-3">
-            <div class="degree">B.S.</div>
-            <div class="year">Mar 2001 - Aug 2005</div>
-          </div>
-          <div class="col-xs-9">
-            <div class="where">
-              <a target="_blank" href="http://postech.ac.kr/">Pohang University of Science and Technology (POSTECH)</a>
-            </div>
-            <div class="major">Computer Science and Engineering</div>
-          </div>
-        </div>
-      </div>
-      <div class="box">
-        <h2>Research Experiences</h2>
+        <h2>Work Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Research Scientist</div>
-            <div class="year">Jul 2017 -</div>
+            <div class="year">Jul 2017 - May 2019</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
@@ -147,29 +119,30 @@
         </div>
       </div>
       <div class="box">
-        <h2>Teaching Experiences</h2>
-        <div class="job clearfix">
+        <h2>Education</h2>
+        <div class="education clearfix">
           <div class="col-xs-3">
-            <div class="profession">Teaching Assistant</div>
-            <div class="year">Spring 2010</div>
+            <div class="degree">Ph.D.</div>
+            <div class="year">Sep 2005 - Feb 2012</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
-              <a target="_blank" href="http://www.postech.ac.kr/">Pohang University of Science and Technology (POSTECH)</a>
+              <a target="_blank" href="http://postech.ac.kr/">Pohang University of Science and Technology (POSTECH)</a>
             </div>
-            <div class="description">CS101, Introduction to Computing<br />Professor: Gary Geunbae Lee</div>
+            <div class="major">Computer Science and Engineering</div>
+            <div class="description">Dissertation: Cross-Lingual Weakly-Supervised Learning of Semantic Relations<br />Advisor: Gary Geunbae Lee</div>
           </div>
         </div>
-        <div class="job clearfix">
+        <div class="education clearfix">
           <div class="col-xs-3">
-            <div class="profession">Teaching Assistant</div>
-            <div class="year">Spring 2006</div>
+            <div class="degree">B.S.</div>
+            <div class="year">Mar 2001 - Aug 2005</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
-              <a target="_blank" href="http://www.postech.ac.kr/">Pohang University of Science and Technology (POSTECH)</a>
+              <a target="_blank" href="http://postech.ac.kr/">Pohang University of Science and Technology (POSTECH)</a>
             </div>
-            <div class="description">CS421, Database System<br />Professor: Byoung-kee Yi</div>
+            <div class="major">Computer Science and Engineering</div>
           </div>
         </div>
       </div>
@@ -284,12 +257,31 @@
             <div class="year">2019</div>
           </div>
           <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C46] </div>
+            <div class="title" style="display:inline">Scoring Sentence Singletons and Pairs for Abstractive Summarization.</div>
+            <div class="author">Logan Lebanoff, Kaiqiang Song, Franck Dernoncourt, Doo Soon Kim, <span>Seokhwan Kim</span>, Walter Chang, Fei Liu</div>
+            <div class="book">To appear in Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a target="_blank" href="http://www.acl2019.org/EN/index.xhtml">ACL 2019</a>), Florence, Jul 2019.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C45] </div>
+            <div class="title" style="display:inline">Learning Emphasis Selection for Written Text in Visual Media from Crowd-Sourced Label Distributions.</div>
+            <div class="author">Amirreza Shirani, Franck Dernoncourt, Paul Asente, Nedim Lipka, <span>Seokhwan Kim</span>, Jose Echevarria, Thamar Solorio
+</div>
+            <div class="book">To appear in Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a target="_blank" href="http://www.acl2019.org/EN/index.xhtml">ACL 2019</a>), Florence, Jul 2019.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C44] </div>
             <div class="title" style="display:inline">Deep Recurrent Neural Networks with Layer-wise Multi-head Attentions for Punctuation Restoration.</div>
             <div class="author">
               <span>Seokhwan Kim</span>
             </div>
-            <div class="book">To appear in Proceedings of the 44th International Conference on Acoustics, Speech, and Signal Processing (<a target="_blank" href="https://2019.ieeeicassp.org/">ICASSP 2019</a>), Brighton, May 2019.</div>
+            <div class="book">Proceedings of the 44th International Conference on Acoustics, Speech, and Signal Processing (<a target="_blank" href="https://2019.ieeeicassp.org/">ICASSP 2019</a>), Brighton, May 2019.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -863,7 +855,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-04-03</div>
+      <div id="footer">Last updated: 2019-05-14</div>
     </div>
   </body>
 </html>
