--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2>Work Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
-            <div class="profession">Research Scientist</div>
+            <div class="profession">NLP Research Scientist</div>
             <div class="year">Jul 2017 - May 2019</div>
           </div>
           <div class="col-xs-9">
@@ -277,11 +277,11 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C44] </div>
-            <div class="title" style="display:inline">Deep Recurrent Neural Networks with Layer-wise Multi-head Attentions for Punctuation Restoration.</div>
+            <div class="title" style="display:inline">Deep Recurrent Neural Networks with Layer-wise Multi-head Attentions for Punctuation Restoration.<div class="link" style="display:inline"><a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/8682418">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://www.slideshare.net/seokhwankim7/deep-recurrent-neural-networks-with-layerwise-multihead-attentions-for-punctuation-restoration">[poster]</a></div></div>
             <div class="author">
               <span>Seokhwan Kim</span>
             </div>
-            <div class="book">Proceedings of the 44th International Conference on Acoustics, Speech, and Signal Processing (<a target="_blank" href="https://2019.ieeeicassp.org/">ICASSP 2019</a>), Brighton, May 2019.</div>
+            <div class="book">Proceedings of the 44th International Conference on Acoustics, Speech, and Signal Processing (<a target="_blank" href="https://2019.ieeeicassp.org/">ICASSP 2019</a>), pp. 7280-7284, Brighton, May 2019.</div>
           </div>
         </div>
         <div class="publication clearfix">
