--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="where">
               <a target="_blank" href="https://research.adobe.com/">Adobe Research</a>
             </div>
-            <div class="description">Creative Intelligence Lab.</div>
+            <div class="description">Dialogue Systems Group,<br />Creative Intelligence Lab.</div>
           </div>
         </div>
         <div class="job clearfix">
@@ -855,7 +855,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-05-14</div>
+      <div id="footer">Last updated: 2019-05-15</div>
     </div>
   </body>
 </html>
