--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">ACL, ACM-SIGIR, CSL, EMNLP, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT</div>
+            <div class="where">ACL, ACM-SIGIR, CSL, CoNLL, EMNLP, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
@@ -867,7 +867,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-06-05</div>
+      <div id="footer">Last updated: 2019-06-21</div>
     </div>
   </body>
 </html>
