--- a/index.html
+++ b/index.html
@@ -270,19 +270,19 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C46] </div>
-            <div style="display:inline" class="title">Scoring Sentence Singletons and Pairs for Abstractive Summarization.</div>
+            <div style="display:inline" class="title">Scoring Sentence Singletons and Pairs for Abstractive Summarization.<div style="display:inline" class="link"><a href="https://www.aclweb.org/anthology/P19-1209" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclweb.org/anthology/papers/P/P19/P19-1209.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Logan Lebanoff, Kaiqiang Song, Franck Dernoncourt, Doo Soon Kim, <span>Seokhwan Kim</span>, Walter Chang, Fei Liu</div>
-            <div class="book">To appear in Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2019.org/EN/index.xhtml" target="_blank">ACL 2019</a>), Florence, Jul 2019.</div>
+            <div class="book">Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2019.org/EN/index.xhtml" target="_blank">ACL 2019</a>), pp. 2175-2189, Florence, Jul 2019.</div>
           </div>
         </div>
         <div class="publication clearfix">
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C45] </div>
-            <div style="display:inline" class="title">Learning Emphasis Selection for Written Text in Visual Media from Crowd-Sourced Label Distributions.</div>
+            <div style="display:inline" class="title">Learning Emphasis Selection for Written Text in Visual Media from Crowd-Sourced Label Distributions.<div style="display:inline" class="link"><a href="https://www.aclweb.org/anthology/P19-1112" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://www.aclweb.org/anthology/papers/P/P19/P19-1112.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Amirreza Shirani, Franck Dernoncourt, Paul Asente, Nedim Lipka, <span>Seokhwan Kim</span>, Jose Echevarria, Thamar Solorio
 </div>
-            <div class="book">To appear in Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2019.org/EN/index.xhtml" target="_blank">ACL 2019</a>), Florence, Jul 2019.</div>
+            <div class="book">Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2019.org/EN/index.xhtml" target="_blank">ACL 2019</a>), pp. 1167-1172, Florence, Jul 2019.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -867,7 +867,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-06-21</div>
+      <div id="footer">Last updated: 2019-09-18</div>
     </div>
   </body>
 </html>
