--- a/index.html
+++ b/index.html
@@ -269,6 +269,24 @@
             <div class="year">2019</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C48] </div>
+            <div style="display:inline" class="title">Just Ask: An Interactive Learning Framework for Vision and Language Navigation.</div>
+            <div class="author">Ta-Chung Chi, Minmin Shen, Mihail Eric, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 3rd Conversational AI workshop: Today's Practice and Tomorrow's Potential, Vancouver, Dec 2019.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C47] </div>
+            <div style="display:inline" class="title">Analyzing Sentence Fusion in Abstractive Summarization.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1910.00203" target="_blank">[preprint]</a></div></div>
+            <div class="author">Logan Lebanoff, John Muchovej, Franck Dernoncourt, Doo Soon Kim, <span>Seokhwan Kim</span>, Walter Chang, Fei Liu</div>
+            <div class="book">To appear in Proceedings of the EMNLP 2019 Workshop on New Frontiers in Summarization (<a href="https://summarization2019.github.io/" target="_blank">NewSum</a>), Hong Kong, Nov 2019.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C46] </div>
             <div style="display:inline" class="title">Scoring Sentence Singletons and Pairs for Abstractive Summarization.<div style="display:inline" class="link"><a href="https://www.aclweb.org/anthology/P19-1209" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclweb.org/anthology/papers/P/P19/P19-1209.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Logan Lebanoff, Kaiqiang Song, Franck Dernoncourt, Doo Soon Kim, <span>Seokhwan Kim</span>, Walter Chang, Fei Liu</div>
@@ -867,7 +885,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-09-20</div>
+      <div id="footer">Last updated: 2019-10-02</div>
     </div>
   </body>
 </html>
