--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div style="display:inline" class="pid_conference">[C48] </div>
             <div style="display:inline" class="title">Just Ask: An Interactive Learning Framework for Vision and Language Navigation.</div>
             <div class="author">Ta-Chung Chi, Minmin Shen, Mihail Eric, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 3rd Conversational AI workshop: Today's Practice and Tomorrow's Potential, Vancouver, Dec 2019.</div>
+            <div class="book">To appear in Proceedings of the 3rd Conversational AI workshop: Today's Practice and Tomorrow's Potential (<a href="http://alborz-geramifard.com/workshops/neurips19-Conversational-AI/Main.html" target="_blank">ConvAI 2019</a>), Vancouver, Dec 2019.</div>
           </div>
         </div>
         <div class="publication clearfix">
