--- a/index.html
+++ b/index.html
@@ -265,18 +265,7 @@
       <div class="box">
         <h2>Publications</h2>
         <div class="publication clearfix">
-          <div class="col-xs-1">
-            <div class="year">2019</div>
-          </div>
-          <div class="col-xs-11">
-            <div style="display:inline" class="pid_conference">[C48] </div>
-            <div style="display:inline" class="title">Just Ask: An Interactive Learning Framework for Vision and Language Navigation.</div>
-            <div class="author">Ta-Chung Chi, Minmin Shen, Mihail Eric, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 3rd Conversational AI workshop: Today's Practice and Tomorrow's Potential (<a href="http://alborz-geramifard.com/workshops/neurips19-Conversational-AI/Main.html" target="_blank">ConvAI 2019</a>), Vancouver, Dec 2019.</div>
-          </div>
-        </div>
-        <div class="publication clearfix">
-          <div class="col-xs-1"></div>
+          <div class="col-xs-1">2019</div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C47] </div>
             <div style="display:inline" class="title">Analyzing Sentence Fusion in Abstractive Summarization.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1910.00203" target="_blank">[preprint]</a></div></div>
