--- a/index.html
+++ b/index.html
@@ -265,7 +265,9 @@
       <div class="box">
         <h2>Publications</h2>
         <div class="publication clearfix">
-          <div class="col-xs-1"></div>
+          <div class="col-xs-1">
+            <div class="year">2019</div>
+          </div>
           <div class="col-xs-11">
             <div class="pid_conference" style="display:inline">[C48] </div>
             <div class="title" style="display:inline">The Eighth Dialog System Technology Challenge.</div>
