--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C49] </div>
             <div style="display:inline" class="title">Just ask: An Interactive Learning Framework for Vision and Language Navigation.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1912.00915" target="_blank">[preprint]</a></div></div>
-            <div class="author">Ta-Chung Chi, Mihail Eric, <span>Seokhwan Kim</span>, <span>Seokhwan Kim</span>, Dilek Hakkani-tur</div>
+            <div class="author">Ta-Chung Chi, Mihail Eric, <span>Seokhwan Kim</span>, Minmin Shen, Dilek Hakkani-tur</div>
             <div class="book">To appear in Proceedings of the Thirty-Fourth AAAI Conference on Artificial Intelligence (<a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI-20</a>), New York, Feb 2020.</div>
           </div>
         </div>
