--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C48] </div>
-            <div style="display:inline" class="title">The Eighth Dialog System Technology Challenge.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1911.06394" target="_blank">[preprint]</a></div></div>
+            <div style="display:inline" class="title">The Eighth Dialog System Technology Challenge.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1911.06394" target="_blank">[preprint]</a></div><div style="display:inline" class="link"><a href="https://www.slideshare.net/seokhwankim7/the-eighth-dialog-system-technology-challenge-dstc8" target="_blank">[poster]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Michel Galley, Chulaka Gunasekara, Sungjin Lee, Adam Atkinson, Baolin Peng, Hannes Schulz, Jianfeng Gao, Jinchao Li, Mahmoud Adada, Minlie Huang, Luis Lastras, Jonathan K. Kummerfeld, Walter S. Lasecki, Chiori Hori, Anoop Cherian, Tim K. Marks, Abhinav Rastogi, Xiaoxue Zang, Srinivas Sunkara, Raghav Gupta</div>
             <div class="book">Proceedings of the 3rd Conversational AI workshop: Today's Practice and Tomorrow's Potential (<a href="http://alborz-geramifard.com/workshops/neurips19-Conversational-AI/Main.html" target="_blank">ConvAI 2019</a>), Vancouver, Dec 2019.</div>
           </div>
