--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">AAAI, ACL, ACM-SIGIR, CSL, CoNLL, EMNLP, ICLR, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT</div>
+            <div class="where">AAAI, ACL, ACM-SIGIR, AI Magazine Special Issue on Conversational AI, CSL, CoNLL, EMNLP, ICLR, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
@@ -896,7 +896,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-12-08</div>
+      <div id="footer">Last updated: 2019-12-19</div>
     </div>
   </body>
 </html>
