--- a/index.html
+++ b/index.html
@@ -250,6 +250,18 @@
         <h2>Tutorials and Invited Talks</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2020</div>
+          </div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="title">Just ask: An Interactive Learning Framework for Vision and Language Navigation.</div>
+            <div class="author">
+              <span>Seokhwan Kim</span>
+            </div>
+            <div class="book">Invited Talk @ AI Assistant Summit (<a href="https://www.re-work.co/events/ai-assistant-summit-san-francisco-2020" target="_blank">RE•WORK</a>), 30 Jan 2020.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2016</div>
           </div>
           <div class="col-xs-11">
@@ -896,7 +908,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2019-12-19</div>
+      <div id="footer">Last updated: 2020-01-15</div>
     </div>
   </body>
 </html>
