--- a/index.html
+++ b/index.html
@@ -253,6 +253,16 @@
             <div class="year">2020</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="title">Summary of DSTC8 and AAAI 2020 Workshop.</div>
+            <div class="author">
+              <span>Seokhwan Kim</span>
+            </div>
+            <div class="book">Invited Talk @ The Third Workshop on Reasoning and Learning for Human-Machine Dialogues (<a href="https://sites.google.com/view/deep-dial2020" target="_blank">DEEP-DIAL 2020</a>), 08 Feb 2020.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="title">Just ask: An Interactive Learning Framework for Vision and Language Navigation.</div>
             <div class="author">
               <span>Seokhwan Kim</span>
@@ -284,7 +294,7 @@
             <div style="display:inline" class="pid_conference">[C49] </div>
             <div style="display:inline" class="title">Just ask: An Interactive Learning Framework for Vision and Language Navigation.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1912.00915" target="_blank">[preprint]</a></div></div>
             <div class="author">Ta-Chung Chi, Mihail Eric, <span>Seokhwan Kim</span>, Minmin Shen, Dilek Hakkani-tur</div>
-            <div class="book">To appear in Proceedings of the Thirty-Fourth AAAI Conference on Artificial Intelligence (<a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI-20</a>), New York, Feb 2020.</div>
+            <div class="book">Proceedings of the Thirty-Fourth AAAI Conference on Artificial Intelligence (<a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI-20</a>), New York, Feb 2020.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -908,7 +918,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-01-15</div>
+      <div id="footer">Last updated: 2020-02-09</div>
     </div>
   </body>
 </html>
