--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="year">2020</div>
           </div>
           <div class="col-xs-11">
-            <div style="display:inline" class="title">Summary of DSTC8 and AAAI 2020 Workshop.</div>
+            <div style="display:inline" class="title">Summary of the Eighth Dialog System Technology Challenge (DSTC8).</div>
             <div class="author">
               <span>Seokhwan Kim</span>
             </div>
@@ -918,7 +918,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-02-09</div>
+      <div id="footer">Last updated: 2020-02-10</div>
     </div>
   </body>
 </html>
