--- a/index.html
+++ b/index.html
@@ -291,6 +291,15 @@
             <div class="year">2020</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C50] </div>
+            <div style="display:inline" class="title">TutorialVQA: Question Answering Dataset for Tutorial Videos.</div>
+            <div class="author">Anthony Colas, <span>Seokhwan Kim</span>, Franck Dernoncourt, Siddhesh Gupte, Zhe Wang, Doo Soon Kim</div>
+            <div class="book">To appear in Proceedings of the 12th International Conference on Language Resources and Evaluation (<a href="https://lrec2020.lrec-conf.org/en/" target="_blank">LREC 2020</a>), Marseille, May 2020.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C49] </div>
             <div style="display:inline" class="title">Just ask: An Interactive Learning Framework for Vision and Language Navigation.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1912.00915" target="_blank">[preprint]</a></div></div>
             <div class="author">Ta-Chung Chi, Mihail Eric, <span>Seokhwan Kim</span>, Minmin Shen, Dilek Hakkani-tur</div>
@@ -918,7 +927,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-02-10</div>
+      <div id="footer">Last updated: 2020-02-14</div>
     </div>
   </body>
 </html>
