--- a/index.html
+++ b/index.html
@@ -291,6 +291,15 @@
             <div class="year">2020</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C51] </div>
+            <div style="display:inline" class="title">Screencast Tutorial Video Understanding.</div>
+            <div class="author">Kunpeng Li, Chen Fang, Zhaowen Wang, <span>Seokhwan Kim</span>, Hailin Jin, Yun Fu</div>
+            <div class="book">To appear in Proceedings of the 2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR 2020</a>), Seattle, Jun 2020.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C50] </div>
             <div style="display:inline" class="title">TutorialVQA: Question Answering Dataset for Tutorial Videos.</div>
             <div class="author">Anthony Colas, <span>Seokhwan Kim</span>, Franck Dernoncourt, Siddhesh Gupte, Zhe Wang, Doo Soon Kim</div>
@@ -927,7 +936,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-02-14</div>
+      <div id="footer">Last updated: 2020-02-24</div>
     </div>
   </body>
 </html>
