--- a/index.html
+++ b/index.html
@@ -162,6 +162,17 @@
         <h2>Professional Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Publicity Chair</div>
+            <div class="year">2020</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="https://sites.google.com/dstc.community/dstc9/home" target="_blank">The Ninth Dialog System Technology Challenge (DSTC9)</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Challenge Chair</div>
             <div class="year">2019</div>
           </div>
@@ -936,7 +947,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-02-24</div>
+      <div id="footer">Last updated: 2020-03-24</div>
     </div>
   </body>
 </html>
